--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="text-center larger">La chouette agencce est une agence de web  design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+				<p class="text-center larger">La chouette agence est une agence de web  design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -119,7 +119,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p class="text-center larger">"La chouette agence est une scellente agence web ! Les web designers ont réussi à captuer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+				<p class="text-center larger">"La chouette agence est une excellente agence web ! Les web designers ont réussi à captuer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 				<p class="text-center">Maxime Guibard, PDG de À vos fourchettes</p>
 
 			</div>
