--- a/page2.html
+++ b/page2.html
@@ -34,8 +34,8 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo du site représentant une chouette" height="40" /></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="Activer la navigation">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
@@ -61,10 +61,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center texte-white hero-bloc-text ">
+				<h1 class="text-center hero-bloc-text texte-black ">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg texte-white tight-width-whitespace">
+				<p class="text-center mg-lg texte-black tight-width-whitespace">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -83,27 +83,28 @@
 					<div class="form-group">
 						<label for="name">
 							Nom
-						</label>
 						<input name="name" id="name" class="form-control" required />
+						</label>
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
-						</label>
 						<input name="name" id="email" class="form-control" type="email" required />
-					</div>
-					<div class="form-group">
-						<label for="know">
-							Comment nous avez-vous connu ?
 						</label>
-						<input name="name" class="form-control" type="email" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label for="projet">
+						<label for="input_504">
+							Comment nous avez-vous connu ?
+						<input name="name" class="form-control" type="email" required id="input_504" />
+						</label>
+					</div>
+					<div class="form-group">
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea name="projet" id="message" class="form-control" rows="4" cols="50" required></textarea>
+							<textarea name="projet" id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer">
 						Envoyer
 					</button>
 				</form>
@@ -128,28 +129,28 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center texte-black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Twitter Icon"><span class="fa fa-twitter icon-md" ></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Facebook Icon"><span class="fa fa-facebook icon-md" ></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Dribble Icon"><span class="fa fa-dribbble icon-md" ></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Instagram Icon"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
